CV attempt, please work or I'll torture kittens

--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mon CV "amélioré"</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class = "page">
+      <div class = "infophoto">
+        <div class = "info">
+          <p><strong>Valérian Jaeken</strong><br/>
+            Né le 1er janvier 1988</p>
+            <p>Avenue Grandchamp 254 - 1150 Woluwe-Saint-Pierre<br/>
+              +32 472 90 45 22<br/>
+              valerianRJ@gmail.com</p>
+              <p>Piéton</p>
+        </div>
+        <div class = "photo">
+        <!--  <a href="https://www.linkedin.com/in/val%C3%A9rian-jaeken-a68b8832/">-->
+          <img alt="Linkedin profile" src="https://i.imgur.com/6kYhUfq.png"/>
+        </div>
+      </div>
+      <div class = "section">
+        <h2>Formation</h2>
+        <div class = "sec-gauche" id = "forma-gauche">
+          <p>2017-2018</p>
+          <p>2008-2010</P>
+          <p>2006-2008</p>
+        </div>
+        <div class = "sec-droite">
+          <p><span class="titre">BeCode</span><br/>Apprentissage WebDev</p>
+          <p><span class="titre">Albert Jacquard</span><br/>Etudes secondaires en 3D orientées jeu vidéo (unreal engine)</p>
+          <p><span class="titre">Don Bosco</span><br/>Développement Java Basique orienté objet</p>
+        </div>
+      </div>
+      <div class = "section">
+        <h2>Expériences professionelles</h2>
+        <div class = "sec-gauche">
+          <p>2017-Présent.</p>
+          <p>2016-2017<br/><span class="duree">(14 mois)</span></p>
+          <div id = "exp-gauche">
+          <p>2012-2016<br/><span class="duree">(37 mois)</span></p>
+          <p>2012-2012<br/><span class="duree">(5 mois)</span></p>
+          <p>2011-2012<br/><span class="duree">(17 mois)</span></p>
+
+        </div>
+
+        <p>2010-2011<br/><span class="duree">(8 mois)</span></p>
+
+        </div>
+        <div class = "sec-droite">
+
+          <p>BeCode<span class="titre"></span><br/>Formation webdev</p>
+          <p>Planet Centauri<span class="titre"></span><br/>Test de qualité d'assurance sur un jeu en cours de développement appelé "Planet centauri"</p>
+          <p>INASTI / RSVZ<span class="titre"></span><br/>Améliorations du calcul des pensions pour les indépendants</p>
+          <p>FSC Internal KSS (BNP Paribas)<span class="titre"></span><br/>Support de l'automation pour diverses applications au sein de BNP Paribas Fortis</p>
+          <p>FOD Finance<span class="titre"></span><br/>Stiron LOT 2 : Mises à jour des déclarations périodiques pour des personnes morales et physiques</p>
+          <p>FOD Finance<span class="titre"></span><br/>Stiron LOT 3 : Consultation des missions pour des personnes physiques et morales</p>
+        </div>
+      </div>
+      <div class = "section">
+        <h2>Langues parlées & autres compétences</h2>
+        <div class = "sec-gauche">
+          <div class="fdp">
+          <p>Anglais : <br/>
+            Néerlandais : </p>
+            <p>Informatique :</p>
+          </div>
+        </div>
+        <div class = "sec-droite" id="langue">
+          <p>Courant<br/>
+          Basique</p>
+          <p>Maitrise des logiciels Excel, Notepad, Quality Center, Starteam, Caliber, 3dsmax, Illustrator, Gimp, Paint, PowerPoint.
+          Maitrise également du SQL, UML, Java, HTML, CSS</p>
+        </div>
+      </div>
+      <div class = "section">
+        <h2>Autres expériences et centres d'intérêt</h2>
+        <div class = "sec-gauche">
+          <p>2016-2017</p>
+        </div>
+        <div class = "sec-droite">
+          <p>Planet Centauri<span></span><br/>Afin d'expérimenter le jeu vidéo en interne et de soutenir le projet d'un ami proche, j'ai testé bénévolement son titre pendant plus d'un an, soutenant son équipe petite (3 personnes) et leur faisant profiter de mon expérience.</p>
+
+
+
+        </div>
+      </div>
+    </div>
+  </body>
+  </html>
