--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
               <p>Piéton</p>
         </div>
         <div class = "photo">
-        <!--  <a href="https://www.linkedin.com/in/val%C3%A9rian-jaeken-a68b8832/">-->
+        <a href="https://www.linkedin.com/in/val%C3%A9rian-jaeken-a68b8832/">
           <img alt="Linkedin profile" src="https://i.imgur.com/6kYhUfq.png"/>
+        </a>
         </div>
       </div>
       <div class = "section">
